Menu fix on mobile (hide open data link)

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -41,6 +41,10 @@
       position:relative;
       float:right;
       margin-top: 18px;
+
+      a.open-data {
+        display: none;
+      }
     }
 
 
