--- a/app/assets/stylesheets/user_info.css.scss
+++ b/app/assets/stylesheets/user_info.css.scss
@@ -14,6 +14,7 @@
     padding: 12px 24px;
     color: $black;
     font-style: italic;
+    text-align: center;
   }
 
   a:hover {
